# polybert-

./: .README.md.kate-swp  README.md  Untitled.ipynb  main.py  polybert20mots_fr.ipynb  polybert_1000mots.ipynb  polybert_20mots.ipynb  polybert_functions.ipynb  pyproject.toml  script_polybert.ipynb
.ipynb_checkpoints/: polybert_1000mots-checkpoint.ipynb  polybert_20mots-checkpoint.ipynb  polybert_bilingue-checkpoint.ipynb  polybert_functions-checkpoint.ipynb  script_polybert-checkpoint.ipynb
