[project]
name = "polybert-sem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "wikipedia-api>=0.14.1",
    "wordfreq>=3.1.1",
]
